--- a/cw_class.html
+++ b/cw_class.html
@@ -7,13 +7,19 @@
     Case Problem 3
     
     Civil War History
-    Author: 
-    Date:   
+    Author: Ashlynn Hickman
+    Date:  9/12/19
 
     Filename: cw_class.html
    -->
    <meta charset="utf-8" />
    <title>Civil War History</title>
+   <link href="cw_styles.css" rel="styleSheet" />
+   <link href="cw_layout.css" rel="styleSheet" />
+   <!--Linking style Sheets-->
+   <link href="https://fonts.googleapis.com/css?family=Limelight&display=swap" rel="styleSheet" />
+   <!--Linking Limelight font-->
+
 </head>
 
 <body>
